--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+
+    <!--CSS External-->
+    <link rel="stylesheet" href="Css\style.css">
 </head>
 <body>
+    
+    <!-- Header -->
+     <header></header>
+
+    <!-- Main -->
+      <main></main>
+
+    <!-- Footer -->
+    <footer></footer>
     
 </body>
 </html>
