Update konfigurasi Style

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>KATIK-JustLexx</title>
 
 
     <!--CSS External-->
@@ -12,13 +12,56 @@
 <body>
     
     <!-- Header -->
-     <header></header>
+     <header class="main-header">
+      <h1> KATIK {Kalkulator Matematik} </h1>
+     </header>
 
-    <!-- Main -->
-      <main></main>
+    <!-- Main Content-->
+      <main>
+
+        <!--Kata Pembuka-->
+        <header>
+          <h1>Selamat datang di KATIK</h1>
+        </header>
+
+        <p>Halo sobat, Selamat datang di KATIK!</p>
+        <p>Saya membuat website MATIK ini agar bisa membantu kamu untuk menghitung luas dan keliling persegi dengan mudah dan cepat</p>
+
+        <!--Navigasi Fitur-->
+        <div class="nav-fitur">
+          <a href=""class="nav-fitur-inactive">Persegi</a>
+          <a href=""class="nav-fitur-active">Persegi Panjang</a>
+        </div>
+
+        <!--Section Luas-->
+        <section class="section-header">
+          <header>
+            <h1>Luas Persegi</h1>
+          </header>
+        </section>
+
+        <!--Gambar Luas Persegi-->
+        <div class="section-image"></div>
+
+        <!--Konten perhitungan -->
+        <div class="calculate-content"> </div>
+
+        <!--Section Keliling-->
+        <section class="section-header">
+          <header>
+            <h1>Keliling Persegi</h1>
+          </header>
+        </section>
+
+        <!--Gambar keliling Persegi-->
+        <div class="section-image"></div>
+
+         <!--Konten perhitungan -->
+         <div class="calculate-content"> </div>
+      </main>
 
     <!-- Footer -->
-    <footer></footer>
+    <footer>Made by JustLexx@2025</footer>
     
 </body>
 </html>
